# Airport-Cpp

./: .gitignore  CMakeLists.txt  README.md
include/: aircraft.hpp  aircraft_base.hpp  aircraft_removal_strategy.hpp  aircraft_template.hpp  random.hpp  simulation.hpp  weight_category.hpp  wind_indicator.hpp  wind_simulation.hpp
resources/: aircraft.txt  textures.txt
resources/aircraft/: a220.ac  a320.ac  a330.ac  a340.ac  a350.ac  a380.ac  avrorj.ac  b707.ac  b737.ac  b747.ac  b757.ac  b767.ac  b777.ac  b787.ac  c172.ac  citation.ac  dash8.ac  glider.ac  md80.ac
src/: aircraft.cpp  aircraft_removal_strategy.cpp  aircraft_template.cpp  main.cpp  random.cpp  simulation.cpp  weight_category.cpp  wind_indicator.cpp  wind_simulation.cpp
